--- a/index.html
+++ b/index.html
@@ -1,164 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
-  <title>Muhammad Fikriansyah</title>
+  <title>PersonalWebsiteNew</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-    body {
-      height: 100vh;
-    }
-    .loading-curtain {
-      background: #000;
-      height: 100%;
-      color: #fff;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      position: relative;
-      vertical-align: middle;
-      justify-content: center;
-    }
-
-    .loading-info {
-      margin: 0 auto;
-      width: 232px;
-    }
-
-    .loading-img {
-      height: 100px;
-      border-radius: 50%;
-      box-shadow: 0px 2px 10px rgba(0,0,0,0.4);
-    }
-
-    .loading-name {
-      font-weight: bold;
-      font-size: 20px;
-      margin-top: 10px;
-    }
-
-    .loading-job-title {
-      font-size: 18px;
-      margin-top: 20px;
-    }
-
-    .loading-city {
-      font-size: 12px;
-      line-height: 15px;
-      margin-top: 7px;
-    }
-
-    .loading-anim {
-      display: flex;
-      margin: 20px auto;
-      padding-top: 20px;
-    }
-
-    .loading-loader1::after, .loading-loader1::before {
-      content: '';
-      display: inline-block;
-      background: rgba(255, 255, 255, 0.2);
-      height: 31px;
-      width: 10px;
-      border-radius: 20%;
-      margin: 0 2px;
-    }
-
-    .loading-loader2::after, .loading-loader2::before {
-      content: '';
-      display: inline-block;
-      background: rgba(255, 255, 255, 0.2);
-      height: 31px;
-      width: 10px;
-      border-radius: 20%;
-      margin: 0 2px;
-    }
-
-    .loading-loader1::before {
-      animation: beating 1.5s ease-in-out infinite;
-    }
-
-    .loading-loader1::after {
-      animation: beating 1.5s ease-in-out 200ms infinite;
-    }
-
-    .loading-loader2::before {
-      animation: beating 1.5s ease-in-out 400ms infinite;
-    }
-
-    .loading-loader2::after {
-      animation: beating 1.5s ease-in-out 600ms infinite;
-    }
-
-    .loading-small-info {
-      position: relative;
-      bottom: -20vh;
-      font-style: italic;
-      font-weight: lighter;
-    }
-
-    @keyframes beating {
-      0% {
-        transform: scale(1);
-        background: rgba(255, 255, 255, 0.2);
-      }
-
-      50% {
-          transform: scale(1.2);
-          background: rgba(255, 255, 255, 1);
-      }
-
-      100% {
-          transform: scale(1);
-          background: rgba(255, 255, 255, 0.2);
-      }
-    }
-  </style>
-<link rel="stylesheet" href="styles.cd0672f2f145917a9d1c.css"></head>
+<style>@import"https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap";@import"https://use.fontawesome.com/releases/v5.2.0/css/all.css";*,*:before,*:after{box-sizing:border-box}*{margin:0}body{line-height:1.5;-webkit-font-smoothing:antialiased}body{font-family:"Silkscreen",Arial,Helvetica,sans-serif;position:relative;background-size:cover;background-repeat:no-repeat}</style><link rel="stylesheet" href="styles.9c3420514c66a98a.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.9c3420514c66a98a.css"></noscript></head>
 <body>
-  <div class="background">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  
-  <app-root>
-    <div class="loading-curtain">
-      <div class="loading-info">
-        <img src="./assets/img/rizki_bg.png" alt="display picture" aria-label="display picture" class="loading-img">
-        <!-- <img src="/home/rizkifikri/Web Development/Personal/personal-view/src/assets/img/rizki_bg.png" alt="display picture" aria-label="display picture" class="loading-img"> -->
-        <h3 class="loading-name">Muhammad Fikriansyah</h3>
-        <h3 class="loading-job-title">Fullstack Web Developer</h3>
-        <p class="loading-city">Trier, Germany</p>
-      </div>
-      <div class="loading-anim">
-        <div class="loading-loader1"></div>
-        <div class="loading-loader2"></div>
-      </div>
-      <div class="loading-small-info">
-        Loading Resources...
-      </div>
-    </div>
-  </app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.c73631205450cdf588fb.js"></script><script type="text/javascript" src="main.1e59266608d6460187a5.js"></script></body>
-</html>
+  <app-root></app-root>
+<script src="runtime.246a809861c954ec.js" type="module"></script><script src="polyfills.e07e6173c07fad3e.js" type="module"></script><script src="main.140bc52155555bb6.js" type="module"></script>
+
+</body></html>
